@@ -913,7 +913,14 @@ void DirectorySymbol::ReadDirectory()
                     (Case::Index(entry -> d_name, U_DOT) < 0 &&
                      SystemIsDirectory(entry -> d_name)))
                 {
-                    entries -> InsertEntry(this, entry -> d_name, length);
+                    int len = DirectoryNameLength() + strlen(entry -> d_name);
+                    char *filename = new char[len + 2]; // +2 for '/', NUL
+                    sprintf(filename, "%s/%s", DirectoryName(),
+                            entry -> d_name);
+                    struct stat status;
+                    if(JikesAPI::getInstance() -> stat(filename, &status) == 0)
+                        entries -> InsertEntry(this, entry -> d_name, length);
+                    delete [] filename;
                 }
             }
             closedir(directory);
