@@ -1,3 +1,8 @@
+2002-09-13  Alan Donovan  <adonovan@lcs.mit.edu>
+
+	* src/symbol.cpp (ReadDirectory): Ignore unreadable files (such as
+	broken links) - bug 3207.
+
 2002-09-11  Eric Blake  <ebb9@email.byu.edu>
 
 	* src/double.cpp (IEEEfloat(LongInt)): Fix bug in (float)long -
